test/conformance/chainsaw/globalcontext/apicall-not-exist/clusterpolicy-failed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: namespace-has-coordinator
status:
  conditions:
  - reason: Failed
    status: "False"
    type: Ready
