test/conformance/chainsaw/globalcontext/apicall-not-exist/clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: namespace-has-coordinator
spec:
  validationFailureAction: Enforce
  failurePolicy: Fail
  rules:
  - name: main-deployment-exists
    context:
    - name: deploymentCount
      globalReference:
        name: non-existent-reference
        jmesPath: "items | length(@)"
    match:
      all:
      - resources:
          kinds:
          - Pod
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      deny:
        conditions:
          any:
          - key: "{{ deploymentCount }}"
            operator: Equal
            value: 0
